# five.grok

./: .gitignore  .meta.toml  CHANGES.rst  MANIFEST.in  README.rst  README.txt  base.cfg  buildout.cfg  five.grok-configure.zcml  plone-4.3.x.cfg  plone-5.0.x.cfg  plone-5.1.x.cfg  pyproject.toml  setup.cfg  setup.py  sources.cfg  tox.ini  versions.cfg
.github/workflows/: tests.yml
devel/: EXTERNALS.txt
docs/: CREDITS.txt  HISTORY.txt  TODO.txt
five/grok/: configure.zcml
five/grok/tests/: test_all.py  views.py
src/: EXTERNALS.txt
src/five/grok/: HISTORY.txt  README.txt  __init__.py  absoluteurl.py  components.py  configure.zcml  directive.py  directives.py  formlib.py  ftesting.zcml  interfaces.py  meta.py  meta.zcml  subscribers.py  templatereg.py  testing.py  util.py
src/five/grok/ftests/: test_grok_functional.py
src/five/grok/ftests/directoryresource/: dirresource.py
src/five/grok/ftests/directoryresource/fixture/: resource.py
src/five/grok/ftests/form/: autofields.py  autofields2.py  form.py
src/five/grok/ftests/site/: folder_site.py  local_site.py
src/five/grok/ftests/view/: argument.py  association.py  codeview.py  file.py  index.py  layers.py  macros.py  namespace.py  namespace_override.py  redirect.py  resource.py  view.py
src/five/grok/ftests/viewlet/: manager_render.py  manager_template.py  security.py  simple.py  simple2.py
src/five/grok/tests/: adapters.py  annotation.py  doctest.py  multiadapter.py  resource.py  subscribers.py  test_all.py  test_secure_views.py  utilities.py  views.py
src/five/grok/tests/all/all_test_templates/: grokvillageview.pt
src/five/grok/tests/view/: ambiguouscontext.py  dirandinlinetemplate.py  dirtemplate.py  dirtemplateandrender.py  dirtemplatesonly.py  eithertemplateorrender.py  explicitimplicittemplate.py  inline.py  inline_unassociated.py  inlinebogus.py  missingcontext.py  namemultiple.py  namemultiple_fixture.py  nameunicode.py  nomodulename.py  nomodulename_fixture.py  notemplateorrender.py  template.py  templatedirectory.py  templatefile.py  templatenotfound.py  templatereload.py  twoviewsusetemplate.py  unassociated.py  update.py  update_redirect.py  view.py
src/five/grok/tests/view/modequalspkgname/: modequalspkgname.py
