# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "five.grok"
version = "4.1.dev0"
description = "Grok-like layer for Zope"
license = "ZPL-2.1"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Zope :: 5",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Lennart Regebro, Godefroid Chapelle",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "martian",
    "Zope >= 5",
    "five.localsitemanager >= 2.0",
    "grokcore.annotation",
    "grokcore.component >= 2.5",
    "grokcore.security >= 1.6.1",
    "grokcore.site",
    "grokcore.view >= 1.12.1",
    "grokcore.viewlet >= 1.3",
    "zope.annotation",
    "zope.component",
    "zope.container",
    "zope.contentprovider",
    "zope.interface",
    "zope.location",
    "zope.pagetemplate",
    "zope.publisher",
    "zope.traversing",
]
keywords = ["zope", "grok"]

[project.optional-dependencies]
form = [
    "grokcore.formlib >= 1.4",
    "five.formlib",
    "zope.formlib",
]
layout = ["grokcore.layout"]
test = [
    "grokcore.formlib >= 1.4",
    "five.formlib",
    "zope.formlib",
    "grokcore.layout",
]

[project.urls]
Source = "https://github.com/zopefoundation/five.grok"
Issues = "https://github.com/zopefoundation/five.grok/issues"
Changelog = "https://raw.githubusercontent.com/zopefoundation/five.grok/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["five.grok"]

[tool.coverage.report]
fail_under = 87
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

